--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
 
 
-  <title>React Glasses</title>
+  <title>React Glasses Website</title>
 </head>
 
 <body>
